# QAMpy

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  TODO.md  appveyor.yml  databaseDrivers.xml  environment.yml  ide.general.xml  inputfcts.py  modsignals.py  pyproject.toml  requirements.txt  setup.py  theory.py  ui.lnf.xml  vcs.xml
Scripts/: 32_qam_equalisation.py  64_qam_equalisation.py  64qam_data_test.py  ber_vs_evm.py  ber_vs_evm_with_equalisation.py  cma_equaliser.py  mrde_equaliser.py  mrde_equaliser_profiling.py  phaserecoverytest.py  pilot_tests.py  profile_mrde.sh  qam_signal_gen.py  qpsk_ber.py  qpsk_ber_profiling.py  qpsk_signal_gen.py  sav_and_load_test.py  sav_meas_test.py  sim_pilot_txrx.py  synctest.py  test_io.py  test_pilot.py  testparallelevm.py  viterbiviterbi.py  zmqphaserec.py
Scripts/Notebooks/: Demo of Tx model with full compensation.ipynb  (+11 more)
docs/: conf.py  index.md
dsp/: IO.py  __init__.py  analog_frontend.py  ber_functions.py  calc_gmi.py  dsp_cython.pyx  dsp_functions.py  equalisation.py  filter.py  filtering.py  helpers.py  impairments.py  io.py  mathfcts.py  modulation.py  phaserec.py  phaserecovery.py  pilotbased_receiver.py  pilotbased_transmitter.py  prbs.py  processing.py  resample.py  segmentaxis.py  signal_quality.py  signals.py  theory.py  training.py  utils.py
qampy/: __init__.py  analog_frontend.py  equalisation.py  filtering.py  helpers.py  impairments.py  io.py  phaserec.py  signals.py  theory.py
test/: 32_qam_equalisation  32_qam_equalisation.py  64_qam_equalisation.py  64qam_data_test.py  64qam_data_test2.py  ber_vs_evm.py  ber_vs_evm_with_equalisation.py  cma_equaliser.py  cma_rde_equaliser.py  generate_pilot_frame.py  lms_equaliser.py  mrde_equaliser.py  mrde_equaliser_profiling.py  phaserecoverytest.py  profile_qpsk.sh  qam_signal_gen.py  qpsk_ber.py  qpsk_ber_profiling.py  qpsk_signal_gen.py  run_pilot_receiver.py  sav_and_load_test.py  sav_meas_test.py  sim_joint_processing.py  sim_pilot_txrx.py  synctest.py  test_analog_frontend.py  test_benchmarks.py  test_ber_functions.py  test_cython_code.py  test_equalisation.py  test_filter.py  test_helpers.py  test_impairments.py  test_io.py  test_modulator.py  test_phaserec.py  test_pilot_signal.py  test_pythran_code.py  test_resample.py  test_signal_quality_calc.py  (+4 more)
(+114 files in other folders)
